--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit Unified Sensor@^1.1.4
+	adafruit/DHT sensor library@^1.4.2
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.18.0
