--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,14 @@
 
 [env:nodemcuv2]
 platform = espressif8266
+monitor_filters = default, esp8266_exception_decoder
+monitor_speed = 115200
 board = nodemcuv2
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.4
 	adafruit/DHT sensor library@^1.4.2
-	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.18.0
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	ottowinter/AsyncMqttClient-esphome@^0.8.5
